--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -218,7 +218,6 @@ Each iteration has five boards manufactured.
 \item Microcontroller Pricing - https://www.digikey.com/product-detail/en/microchip-technology/ATSAM4N16BA-MUR/1611-ATSAM4N16BA-MURCT-ND/6832601
 \item Battery Management IC Pricing - https://www.digikey.com/product-detail/en/texas-instruments/BQ25121AYFPT/296-49478-1-ND/9360696
 \item USB Connector Pricing - https://www.digikey.com/product-detail/en/molex-llc/1050170001/WM1399CT-ND/2350885
-\item PCB Fabrication Pricing (all default settings; $5$ boards with size $5$cm x $5$cm) - https://www.7pcb.com/pcb-quote-online.php?c5=5\&c1980=5\&e1980=5\&dimension=cm\&c9=0.062\&c11=2\&c13=1\&c15=Green\&c17=1\&c19=1\&country=US\&turnaround=1\&send=Calculate\&x=69\&y=14
-\item PCB Assembly Pricing (5 boards, 15 BOM lines, 3 BGA/QFN parts, all else 0) - https://www.7pcb.com/PCB-Assembly-Quote.php?d3=1\&d5=0\&c6=5\&c8=15\&c11=0\&c13=1\&c18=0\&c20=0\&c23=0\&c25=3\&send=Calculate\&x=117\&y=18
+\item PCB Fabrication Pricing ($5$ $2$-layer boards with size $2$in x $2$in) - https://onequote.sunstone.com/onequote-form/?APIHashKey=AC689457096C621E2335AC01B2FBBCFA
 \end{itemize}
 \end{document}
