updated proposal (boost converter and battery)

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage[margin=1in]{geometry}
 \usepackage{siunitx}
 \usepackage{url}
 \usepackage{placeins}
@@ -212,12 +213,14 @@ Each iteration has five boards manufactured.
 \begin{itemize}
 \item Decawave's DW1000 Datasheet V2.09 - https://www.decawave.com/sites/default/files/resources/dw1000-datasheet-v2.09.pdf
 \item Antenna Pricing - https://www.digikey.com/product-detail/en/taiyo-yuden/AH086M555003-T/587-2204-1-ND/2002902 
-\item Battery Pricing - https://www.mouser.com/ProductDetail/TinyCircuits/ASR00036?qs=sGAEpiMZZMt9AXHBRDCfltZePquEfJYbBmgZK9wnboo\%3d
-\item DC-DC Converter Pricing - https://www.mouser.com/ProductDetail/TinyCircuits/ASR00036?qs=sGAEpiMZZMt9AXHBRDCfltZePquEfJYbBmgZK9wnboo\%3d
+\item Battery Pricing - https://www.mouser.com/ProductDetail/Panasonic-Battery/N-700AAC?qs=
+sGAEpiMZZMuXcNZ31nzYheBfWfNlBtfIyaHPOtibkPY\%3d
+\item Boost Converter Pricing - https://www.mouser.com/ProductDetail/Texas-Instruments/TPS613221ADBVR ?qs=sGAEpiMZZMtitjHzVIkrqZzDzZChF5ZsUOpHXJt\%2fThr4SLF5Rj6okA\%3d\%3d
 \item DW1000 Pricing - https://www.semiconductorstore.com/cart/pc/viewPrd.asp?idproduct=50015
 \item Microcontroller Pricing - https://www.digikey.com/product-detail/en/microchip-technology/ATSAM4N16BA-MUR/1611-ATSAM4N16BA-MURCT-ND/6832601
-\item Battery Management IC Pricing - https://www.digikey.com/product-detail/en/texas-instruments/BQ25121AYFPT/296-49478-1-ND/9360696
+\item Battery Management IC Pricing - https://www.digikey.com/product-detail/en/texas-instruments/\\ BQ25121AYFPT/296-49478-1-ND/9360696
 \item USB Connector Pricing - https://www.digikey.com/product-detail/en/molex-llc/1050170001/WM1399CT-ND/2350885
-\item PCB Fabrication Pricing ($5$ $2$-layer boards with size $2$in x $2$in) - https://onequote.sunstone.com/onequote-form/?APIHashKey=AC689457096C621E2335AC01B2FBBCFA
+\item PCB Fabrication Pricing ($5$ $2$-layer boards with size $2$in x $2$in) - https://onequote.sunstone.com/
+onequote-form/?APIHashKey=AC689457096C621E2335AC01B2FBBCFA
 \end{itemize}
 \end{document}
